# labplanner

./: CMakeLists.txt  README.md  csvparser.h  experimento.cpp  experimento.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processor.cpp  processor.h
.github/workflows/: build.yml
